# drone-landing

./: .gitignore  Dockerfile  README.md  dreamer.py  dreamer_v3.py  drone_training.py  drone_training_stacked_frames.py  imitation_learning.py  pyproject.toml  requirements.txt  stable_baselines.py
drone_aviary/: __init__.py
drone_aviary/envs/: BaseAviary.py  __init__.py
drone_aviary/envs/single_agent_rl/: BaseSingleAgentAviary.py
drone_aviary/envs/single_agent_rl/platform_aviary/: LandingAviary.py  PlatformAviary.py  TakeoffAviary.py
drone_aviary/envs/single_agent_rl/platform_aviary/data/: wall.urdf
drone_landing/: __init__.py
drone_landing/envs/: __init__.py
drone_landing/envs/data/: wall.urdf
drone_landing/envs/single_agent_rl/: BaseSingleAgentAviary.py  LandingAviary.py
utils/: callbacks.py  make_trajectories.py  policies.py
