[tool.poetry]
name = "drone-landing"
version = "0.0.1"
description = "PyBullet Gym drone landing environment for reinforcement learning of quadcopter control"
authors = ["Ivan Efremov"]
license = "MIT"
packages = [
    { include = "drone_landing" }
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

